Included bootstrap from CDN, but made certain elements have a higher specificity to prevent Bootstrap from overriding. Improved readability of image text and -links

--- a/scss/main.css
+++ b/scss/main.css
@@ -10,6 +10,7 @@ body {
   /*Contrast to theme color. For button background and some textboxes. Alt FF9,FC6,CC6*/
   --contrast-color: #FC6;
   --link-color: #FFF; /*Default color of links/button text and their borders*/
+  --border-select: #000; /*Default border color of buttons when hovering*/
   --select-color: #009; /*Default button color when hovering. Alt 009, 00F*/
   --bgcolor: #999; /*Default background color. Alt. 999, CC9*/
   --sub-bgcolor: #CCC; /*Background color for subsections*/
@@ -30,18 +31,19 @@ body {
   padding: 0px;
 }
 
-body {
+/*base is a generic class for page bodies to override bootstrap styles.*/
+body.base {
   margin: var(--pads);
   margin-top: 120px;    /*Make room for wrapper*/
   overflow-x: hidden;     /*Prevent scroll-bar and remove the overflowing content. Possible issue at small screen widths.*/
   background-color: var(--bgcolor); /*Alt. 999,CC9*/
 }
 
-h2 {
+.base h2 {
   margin: var(--big-pads);
 }
 
-h4 {
+.base h4 {
   margin-top: var(--pads);
   margin-bottom: var(--big-pads);
   text-align: center;
@@ -49,12 +51,12 @@ h4 {
   color: #666;
 }
 
-p, li {
+.base p, .base li {
   margin: var(--big-pads);
 }
 
 /*Styling links as buttons. Might want to adopt a more modern implementation later.*/
-a {
+.base a {
   padding: var(--big-pads);
   border: 2px solid transparent;
   border-radius: var(--big-pads);
@@ -63,16 +65,18 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  border-color: #000;
+.base a:hover {
+  border-color: var(--border-select);
+  color: var(--link-color);
   background-color: var(--select-color);
+  text-decoration: none;
 }
 
-ul {
+.base ul {
   list-style-position: inside;
 }
 
-hr {
+.base hr {
   border: 1px solid var(--theme-color);
 }
 
@@ -86,7 +90,7 @@ hr {
 }
 
 /*Used above or below other content to change its position*/
-p.usynlig {
+.usynlig {
   visibility: hidden;
 }
 
@@ -122,11 +126,10 @@ p.sign {
 
 #banner a {
   padding: 0;
-  border: 0;
+  margin: 2px;  /*When added to border-width, the result should equal var(--pads)*/
 }
 
 #banner img {
-  margin: var(--pads);    /*As a margin between img and the next element*/
   width: var(--logo-width);
   display: flex;          /*Prevents extra bottom-padding for image link*/
 }
@@ -143,14 +146,12 @@ p.sign {
   margin-bottom: var(--pads);
   margin-left: 1px;
   border-radius: 0;
-  text-decoration: underline;
   font-size: 18px;
   background-color: var(--contrast-color);
   color: var(--theme-color);
 }
 
 #navbar a:hover {
-  border-color: transparent;
   color: var(--select-color);
 }
 
@@ -170,26 +171,40 @@ p.sign {
 }
 
 /*Text/button to be written on top of image*/
-.ill-text {
+.ill-box {
   position: absolute;
   width: 100%;    /*Not automatic when pos is absolute*/
   right: 0px;   /*Prevents the element from flowing outside the body margins.*/
   text-align: center;
-  color: var(--link-color); /*Change to some other var or value if necessary*/
+  /*color: var(--link-color);*/ /*Change to some other var or value if necessary*/
 }
 
-.ill-text a {
+.ill-link {
+  display: block;
+}
+
+.ill-box a {
   margin-top: 16px;
   border-color: var(--contrast-color);
   color: var(--contrast-color);
   display: inline-block;
   font-size: 20px;
-  background-color: transparent;
+  background-color: var(--theme-color);
+  opacity: 0.8;
 }
 
-.ill-text a:hover {
+.ill-box a:hover {
   background-color: var(--select-color);
   border-color: #000;
+  opacity: 1;
+}
+
+.ill-text {
+  display: inline-block;
+  clear: left;
+  color: #FFF;
+  background-color: #000;
+  opacity: 0.5;
 }
 
 /*info*/
